--- a/TaskExplorer/Resources/TaskExplorer.rc
+++ b/TaskExplorer/Resources/TaskExplorer.rc
@@ -6,6 +6,8 @@
 
 #include "winres.h"
 
+#include "../version.h"
+
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_DEA)
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN_AUSTRIAN
 #pragma code_page(1252)
@@ -59,8 +61,8 @@ IDR_RT_MANIFEST         RT_MANIFEST             "TaskExplorer.manifest"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION VERSION_BIN
+ PRODUCTVERSION VERSION_BIN
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -68,21 +70,21 @@ VS_VERSION_INFO VERSIONINFO
  FILEFLAGS 0x0L
 #endif
  FILEOS 0x40004L
- FILETYPE 0x0L
+ FILETYPE 0x1L
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
         BLOCK "0c0704b0"
         BEGIN
-            //VALUE "CompanyName", "xanasoft.net"
+            VALUE "CompanyName", MY_COMPANY_NAME_STRING
             VALUE "FileDescription", "TaskExplorer"
-            VALUE "FileVersion", "1.2.0.0"
-            VALUE "InternalName", "TaskExplorer.rc"
-            VALUE "LegalCopyright", "Copyright (C) 2019-2020 by DavidXanatos"
-            VALUE "OriginalFilename", "TaskExplorer.rc"
-            VALUE "ProductName", "TaskExplorer"
-            VALUE "ProductVersion", "1.2.0.0"
+            VALUE "FileVersion", VERSION_STR
+            VALUE "InternalName", "TaskExplorer.exe"
+            VALUE "LegalCopyright", MY_COPYRIGHT_STRING
+            VALUE "OriginalFilename", "TaskExplorer.exe"
+            VALUE "ProductName", MY_PRODUCT_NAME_STRING
+            VALUE "ProductVersion", VERSION_STR
         END
     END
     BLOCK "VarFileInfo"
